# minimdm

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Changelog.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirementsSpecification.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_system_tables.py  0002_add_can_publish_to_schema_permissions.py
app/: config.py  database.py  main.py
app/api/: admin_api.py  audit_api.py  auth_api.py  import_export.py  objects.py  schemas_api.py
app/core/: audit.py  auth.py  limiter.py  logging.py  migrations.py  permissions.py  schema_loader.py  table_manager.py  webhooks.py
app/static/css/: styles.css  tokens.css
app/static/js/: app.js  auth.js
app/templates/: base.html  error.html  index.html
app/templates/admin/: audit.html  users.html
app/templates/auth/: login.html  reset_password.html
app/templates/objects/: detail.html  form.html  history.html  list.html
config/: minimdm.example.yaml  minimdm.json  minimdm.yaml
demo/: README.md  customers.csv  product_categories.csv  products.csv  suppliers.csv
docs/: backup-restore.md  deployment.md  docker-setup.md  installation.md  known_issues.md  logging.md  migrations.md  quickstart.md  reference.md  software.md  testing.md  troubleshooting.md
scripts/: docker-rebuild.sh  docker-setup.sh  init-db.sh
tests/: conftest.py  test_api_auth.py  test_api_import_export.py  test_api_lifecycle.py  test_api_lifecycle_policy.py  test_api_permissions.py  test_api_query_params.py  test_api_records.py  test_api_schemas.py  test_api_webhooks.py  test_import_export.py  test_schema_loader.py  test_table_manager.py  test_templates.py
tests/browser/: conftest.py  test_admin.py  test_auth.py  test_config.yaml  test_edit_delete.py  test_history_revert.py  test_import_export.py  test_lifecycle.py  test_records.py
