[project]
name = "minimdm"
version = "0.1.0"
description = "A minimal lightweight Master Data Management application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.0.0",
    "aiofiles>=24.0.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
