[project]
name = "minimdm"
version = "0.6.2"
description = "A minimal lightweight Master Data Management application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.31",
    "pydantic-settings>=2.0.0",
    "aiofiles>=24.0.0",
    "pyjwt>=2.13.0",
    "bcrypt>=4.0.0",
    "slowapi>=0.1.9",
    "alembic>=1.18.4",
    "mako>=1.3.12",
    "starlette>=1.3.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "httpx2>=2.3.0",
    "playwright>=1.49.0",
    "pytest-playwright>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # slowapi uses asyncio.iscoroutinefunction() which is deprecated since Python 3.12.
    # This is a third-party issue; suppress until slowapi ships a fix.
    "ignore::DeprecationWarning:slowapi",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
